--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "description": "My Interactive Resume Website",
   "repository": "github:OmarEinea/Website",
   "license": "MIT",
-  "version": "2.1.0",
-  "main": "webpack.config.js",
+  "version": "3.0.0",
+  "main": "webpack.config.ts",
   "devDependencies": {
-    "@material-ui/core": "^4.11.3",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-react-html-attrs": "^2.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@material-ui/core": "^4.12.4",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^16.14.23",
+    "@types/react-dom": "^16.9.14",
+    "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "mini-css-extract-plugin": "^2.6.0",
@@ -23,13 +21,16 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "terser-webpack-plugin": "^5.3.1",
-    "webpack": "^5.70.0",
+    "ts-loader": "^9.2.8",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
+    "webpack-dev-server": "^4.8.1",
     "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production && node minify.js"
+    "build": "webpack --mode production && ts-node minify.ts"
   }
 }
