Base: upgrade to ReactJS v18 and Material-UI v5

--- a/package.json
+++ b/package.json
@@ -4,33 +4,34 @@
   "description": "My Interactive Resume Website",
   "repository": "github:OmarEinea/Website",
   "license": "MIT",
-  "version": "3.0.3",
+  "version": "3.1.0",
   "main": "webpack.config.ts",
   "devDependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
-    "@types/react": "^16.14.23",
-    "@types/react-dom": "^16.9.14",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
+    "@types/node": "^18.19.2",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
     "@types/webpack-dev-server": "^4.7.2",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "node-fetch": "^2.6.1",
-    "postcss": "^8.4.12",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-loader": "^9.2.8",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "whatwg-fetch": "^3.6.2"
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "http-server": "^14.1.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "whatwg-fetch": "^3.6.19"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production && ts-node minify.ts"
+    "build": "webpack --mode production && ts-node minify.ts",
+    "test": "http-server dist"
   }
 }
